@@ -216,6 +216,7 @@ print.preview=Print Preview
 print.preview.page-of=of
 file.print=Print
 print.range=Range
+print.zoom=Zoom
 file.history=History
 file.exit=Exit
 
