@@ -72,6 +72,7 @@ print.preview=Преглед за печат
 # print.preview.page-of=
 file.print=Печат
 print.range=Обхват
+# print.zoom=
 file.history=История
 file.exit=Изход
 
