@@ -72,6 +72,7 @@ print.preview=Previsualitzeu la impressió
 print.preview.page-of=De
 file.print=Imprimeix
 print.range=Rang
+# print.zoom=
 file.history=Històric
 file.exit=Sortir
 
