@@ -72,6 +72,7 @@ print.preview=Náhled tisku
 # print.preview.page-of=
 file.print=Tisk
 print.range=Rozsah
+# print.zoom=
 file.history=Historie
 file.exit=Konec
 
