@@ -72,6 +72,7 @@ print.preview=Druckvorschau
 print.preview.page-of=von
 file.print=Drucken
 print.range=Bereich
+# print.zoom=
 file.history=Zuletzt geöffnete Dateien
 file.exit=Beenden
 
