@@ -72,6 +72,7 @@ print.preview=Προεπισκόπηση Εκτύπωση
 print.preview.page-of=του
 file.print=Εκτύπωση
 print.range=Εύρος
+# print.zoom=
 file.history=Ιστορικό
 file.exit=Έξοδος
 
