@@ -72,6 +72,7 @@ print.preview=Vista Preliminar
 print.preview.page-of=De
 file.print=Imprimir
 print.range=Rango
+# print.zoom=
 file.history=Historial
 file.exit=Salir
 
