@@ -72,6 +72,7 @@ print.preview=Vista Preliminar
 # print.preview.page-of=
 file.print=imprimatu
 print.range=Rango
+# print.zoom=
 file.history=Historiala
 file.exit=Irten
 
