@@ -72,6 +72,7 @@ print.preview=Tulostuksen esikatselu
 # print.preview.page-of=
 file.print=Tulosta
 print.range=Tulostusalue
+# print.zoom=
 file.history=Viimeksi avatut tiedostot
 file.exit=Lopeta
 
