@@ -72,6 +72,7 @@ print.preview=Aperçu avant impression
 print.preview.page-of=sur
 file.print=Imprimer
 print.range=Plage de mesures
+# print.zoom=
 file.history=Historique
 file.exit=Quitter
 
