@@ -72,6 +72,7 @@ print.preview=Nyomtatási kép
 # print.preview.page-of=
 file.print=Nyomtatás
 print.range=Tartomány
+# print.zoom=
 file.history=Elõzmények
 file.exit=Kilépés
 
