@@ -72,6 +72,7 @@ print.preview=Anteprima stampa
 print.preview.page-of=Di
 file.print=Stampa
 print.range=Misura
+# print.zoom=
 file.history=Cronologia
 file.exit=Esci
 
