@@ -72,6 +72,7 @@ print.preview=印刷プレビュ
 print.preview.page-of=/
 file.print=印刷
 print.range=範囲
+# print.zoom=
 file.history=履歴
 file.exit=終了
 
