@@ -72,6 +72,7 @@ print.preview=인쇄 미리보기
 # print.preview.page-of=
 file.print=인쇄
 print.range=범위
+# print.zoom=
 # file.history=
 file.exit=종료
 
