@@ -72,6 +72,7 @@ print.preview=Spaudinio peržiūra
 print.preview.page-of=iš
 file.print=Spausdinti
 print.range=Rėžiai
+# print.zoom=
 file.history=Istorija
 file.exit=Baigti
 
