@@ -72,6 +72,7 @@ print.preview=Afdruk Voorbeeld
 # print.preview.page-of=
 file.print=Afdrukken
 print.range=Bereik
+# print.zoom=
 file.history=Geschiedenis
 file.exit=Afsluiten
 
