@@ -72,6 +72,7 @@ print.preview=Podgląd wydruku
 print.preview.page-of=z
 file.print=Drukuj
 print.range=Zakres
+# print.zoom=
 file.history=Historia
 file.exit=Zakończ
 
