@@ -72,6 +72,7 @@ print.preview=Visualizar impressão
 # print.preview.page-of=
 file.print=Imprimir
 print.range=Faixa
+# print.zoom=
 file.history=Histórico
 file.exit=Sair
 
