@@ -72,6 +72,7 @@ print.preview=Предварительный просмотр
 print.preview.page-of=От
 file.print=Печать
 print.range=Диапазон
+# print.zoom=
 file.history=История
 file.exit=Выход
 
