@@ -72,6 +72,7 @@ print.preview=Pregled pre štampe
 # print.preview.page-of=
 file.print=Štampaj
 print.range=Opseg
+# print.zoom=
 file.history=Istorija
 file.exit=Izađi
 
