@@ -72,6 +72,7 @@ print.preview=Förhandskgranska utskrift
 print.preview.page-of=Av
 file.print=Skriv ut
 print.range=Sidintervall
+# print.zoom=
 file.history=Tidigare
 file.exit=Avsluta
 
