@@ -72,6 +72,7 @@ print.preview=Попередній перегляд
 # print.preview.page-of=
 file.print=Друкувати
 print.range=Діапазон
+# print.zoom=
 file.history=Історія
 file.exit=Вихід
 
