@@ -72,6 +72,7 @@ print.preview=Xem thử
 # print.preview.page-of=
 file.print=In
 print.range=Phạm vi
+# print.zoom=
 file.history=Đã làm
 file.exit=Thoát
 
