@@ -72,6 +72,7 @@ print.preview=打印预览
 print.preview.page-of=共
 file.print=打印
 print.range=范围
+# print.zoom=
 file.history=最近文件
 file.exit=退出
 
