@@ -72,6 +72,7 @@ print.preview=預覽列印
 print.preview.page-of=之
 file.print=列印
 print.range=範圍
+# print.zoom=
 file.history=歷史紀錄
 file.exit=離開
 
